@@ -1,5 +1,6 @@
 Jun 19, 2023
   CurationDafGenerator -- added generation of cross references to OMIM genes
+  CurationDafGenerator -- removal of duplicate annotations (human daf) -- fix
 
 Jun 18, 2023
   CurationDafGenerator -- implemented removal of duplicate annotations (human daf)
